--- a/2_stream_video/video-streaming-client/package.json
+++ b/2_stream_video/video-streaming-client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.3",
     "@vidstack/react": "^1.12.12",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
