--- a/2_stream_video/video-streaming-client/package.json
+++ b/2_stream_video/video-streaming-client/package.json
@@ -16,7 +16,8 @@
     "@vidstack/react": "^1.12.12",
     "axios": "^1.7.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
